Added new country endpoints
